--- a/Docroot/.htaccess
+++ b/Docroot/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /lien-thong
+RewriteBase /framework
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
