--- a/Docroot/.htaccess
+++ b/Docroot/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /framework
+RewriteBase /telerad2
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
